// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Menu rendering renders expected elements 1`] = `
<div
  className="Menu"
  role="menu"
>
  <MenuItem />
</div>
`;

exports[`Menu rendering renders expected elements when optional properties are set 1`] = `
<div
  className="Menu TestClass"
  id="test"
  role="menu"
>
  <MenuItem />
</div>
`;
